--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Uni-Websites</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
+    <link rel="icon" href="css/icon64.ico" type="image/vnd.microsoft.icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
@@ -15,17 +16,17 @@
     </header>
     <div class="wrapper">
       <section class="main">
-	   <section class="unbenotet">
+        <section class="unbenotet">
           <h3>Grundlagen der Projekt- entwicklung</h3>
           <ul>
             <li><a href="https://tdpe.techfak.uni-bielefeld.de/login?back_url=https%3A%2F%2Ftdpe.techfak.uni-bielefeld.de%2Fprojects%2Ftdpe-ws-2016">Redmine</a></li>
             <li><a href="https://github.com/https/">Github</a></li>
             <li><a href="https://citdpe.techfak.uni-bielefeld.de/">Jenkins</a></li>
-			<li><a href="https://bis.uni-bielefeld.de/sites/4295/Start.aspx">Lernraum: V</a></li>
+            <li><a href="https://bis.uni-bielefeld.de/sites/4295/Start.aspx">Lernraum: V</a></li>
             <li><a href="https://bis.uni-bielefeld.de/sites/3071/Start.aspx">Lernraum: S+Ü</a></li>
           </ul>
         </section>
-		 <section class="benotet">
+        <section class="benotet">
           <h3> Rechner- architektur </h3>
           <ul>
             <li><a href="http://www.ti.uni-bielefeld.de/html/teaching/WS1617/techinf1/index.html">Lernraum: V+Ü</a></li>
@@ -37,13 +38,13 @@
             <li><a href="https://bis.uni-bielefeld.de/sites/4008/Start.aspx">Lernraum: V+Ü</a></li>
           </ul>
         </section>
-		 <section class="benotet">
+        <section class="benotet">
           <h3>Datenbanken und Modellierung</h3>
           <ul>
             <li><a href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=777">Lernraum: V+Ü</a></li>
           </ul>
         </section>
-		 <section class="unbenotet">
+        <section class="unbenotet">
           <h3>GKK I</h3>
           <ul>
             <li><a href="https://bis.uni-bielefeld.de/sites/3806/Start.aspx">Lernraum: V+Ü</a></li>
@@ -55,42 +56,42 @@
             <li><a href="https://www.math.uni-bielefeld.de/~dotten/NWI_GDGL1617.shtml">Website S+Ü+V</a></li>
           </ul>
         </section>
-           <section class="unbenotet">
+        <section class="unbenotet">
           <h3>Email-Accounts</h3>
           <ul>
             <li><a href="https://webmail.uni-bielefeld.de/">HRZ</a></li>
             <li><a href="https://webmail.techfak.de/">Techfak</a></li>
           </ul>
-        </section>            
+        </section>
       </section>
       <section class="info">
-       <section class="table">
-        <table>
-           <tr>
+        <section class="table">
+          <table>
+            <tr>
               <th>Deadline</th>
               <th>Dienstag</th>
               <th>Mittwoch</th>
-              <th>Donnerstag</th>         
-           </tr>
-           <tr>
+              <th>Donnerstag</th>
+            </tr>
+            <tr>
               <td>10:00 Uhr</td>
               <td>TheoInf (uKW) <br> CMD4, PFtd 248 <br> TC+JP+JG | JS+* <br> <br> TdPE Redmine <br> Einzelabgabe</td>
               <td> </td>
               <td>GKK (uKW) <br> Lernraum /VL <br> TC+JS | JG + JP + D </td>
-           </tr>
-           <tr>
+            </tr>
+            <tr>
               <td>14:00 Uhr</td>
               <td> </td>
               <td>Mathe/NWI <br> V3-128, PF 187 <br> TC+JP+JS | JG+D+D</td>
               <td> </td>
-           </tr>
-           <tr>
+            </tr>
+            <tr>
               <td>20:00 Uhr</td>
               <td> </td>
               <td>Datenbanken <br> LernraumPlus <br> Einzelabgabe</td>
               <td> </td>
-           </tr>
-         </table>
+            </tr>
+          </table>
         </section>
       </section>
     </div>
