remove table and add Deadlines to each section

--- a/index.html
+++ b/index.html
@@ -20,41 +20,46 @@
           <h3>Grundlagen der Projekt- entwicklung</h3>
           <ul>
             <li><a href="https://tdpe.techfak.uni-bielefeld.de/login?back_url=https%3A%2F%2Ftdpe.techfak.uni-bielefeld.de%2Fprojects%2Ftdpe-ws-2016">Redmine</a></li>
-            <li><a href="https://github.com/https/">Github</a></li>
             <li><a href="https://citdpe.techfak.uni-bielefeld.de/">Jenkins</a></li>
             <li><a href="https://bis.uni-bielefeld.de/sites/4295/Start.aspx">Lernraum: V</a></li>
             <li><a href="https://bis.uni-bielefeld.de/sites/3071/Start.aspx">Lernraum: S+Ü</a></li>
           </ul>
+          <h4>Dienstag 10:00</h4>
         </section>
         <section class="benotet">
           <h3> Rechner- architektur </h3>
           <ul>
             <li><a href="http://www.ti.uni-bielefeld.de/html/teaching/WS1617/techinf1/index.html">Lernraum: V+Ü</a></li>
           </ul>
+          <h4>Dienstag 10:00</h4>
         </section>
         <section class="benotet">
           <h3>Theoretische Informatik</h3>
           <ul>
             <li><a href="https://bis.uni-bielefeld.de/sites/4008/Start.aspx">Lernraum: V+Ü</a></li>
           </ul>
+          <h4>Dienstag 10:00</h4>
         </section>
         <section class="benotet">
           <h3>Datenbanken und Modellierung</h3>
           <ul>
             <li><a href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=777">Lernraum: V+Ü</a></li>
           </ul>
+          <h4>Mittwoch 20:00</h4>
         </section>
         <section class="unbenotet">
           <h3>GKK I</h3>
           <ul>
             <li><a href="https://bis.uni-bielefeld.de/sites/3806/Start.aspx">Lernraum: V+Ü</a></li>
           </ul>
+          <h4>Donnerstag 10:00</h4>
         </section>
         <section class="teilnoten">
           <h3>Mathe</h3>
           <ul>
             <li><a href="https://www.math.uni-bielefeld.de/~dotten/NWI_GDGL1617.shtml">Website S+Ü+V</a></li>
           </ul>
+          <h4>Mittwoch 14:00</h4>
         </section>
         <section class="unbenotet">
           <h3>Email-Accounts</h3>
@@ -62,10 +67,11 @@
             <li><a href="https://webmail.uni-bielefeld.de/">HRZ</a></li>
             <li><a href="https://webmail.techfak.de/">Techfak</a></li>
           </ul>
+          <h4>Dienstag 10:00</h4>
         </section>
       </section>
       <section class="info">
-        <section class="table">
+        <!-- <section class="table">
           <table>
             <tr>
               <th>Deadline</th>
@@ -92,7 +98,7 @@
               <td> </td>
             </tr>
           </table>
-        </section>
+        </section> -->
       </section>
     </div>
   </body>
