Fixed mobile view

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <h4>Dienstag 10:00</h4>
         </section>
       </section>
-      <section class="info">
+      <!--section class="info">
         <!-- <section class="table">
           <table>
             <tr>
@@ -98,8 +98,8 @@
               <td> </td>
             </tr>
           </table>
-        </section> -->
-      </section>
+        </section> >
+      </section-->
     </div>
   </body>
 </html>
