Improved email visuals

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <ul>
             <li><a href="http://www.ti.uni-bielefeld.de/html/teaching/WS1617/techinf1/index.html">Lernraum: V+Ü</a></li>
           </ul>
-          <h4>Dienstag 10:00</h4>
+          <h4>TBA</h4>
         </section>
         <section class="benotet">
           <h3>Theoretische Informatik</h3>
@@ -61,13 +61,12 @@
           </ul>
           <h4>Donnerstag 10:00</h4>
         </section>
-        <section class="unbenotet">
+        <section class="email">
           <h3>Email-Accounts</h3>
           <ul>
             <li><a href="https://webmail.uni-bielefeld.de/">HRZ</a></li>
             <li><a href="https://webmail.techfak.de/">Techfak</a></li>
           </ul>
-          <h4>Dienstag 10:00</h4>
         </section>
       </section>
       <!--section class="info">
