--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li><a href="https://bis.uni-bielefeld.de/sites/4295/Start.aspx">Lernraum: V</a></li>
             <li><a href="https://bis.uni-bielefeld.de/sites/3071/Start.aspx">Lernraum: S+Ü</a></li>
           </ul>
-          <h4>Dienstag 10:00</h4>
+          <h4>Mittwoch 10:00</h4>
         </section>
         <section class="teilnoten">
           <h3>Mathe</h3>
