Remove clutter and ready for new Semester

--- a/index.html
+++ b/index.html
@@ -17,49 +17,33 @@
     <div class="wrapper">
       <section class="main">
         <section class="benotet">
-          <h3> Rechner- architektur </h3>
-          <ul>
-            <li><a href="http://www.ti.uni-bielefeld.de/html/teaching/WS1617/techinf1/index.html">Lernraum: V+Ü</a></li>
-          </ul>
-          <h4>TBA</h4>
-        </section>
-        <section class="benotet">
-          <h3>Theoretische Informatik</h3>
-          <ul>
-            <li><a href="https://bis.uni-bielefeld.de/sites/4008/Start.aspx">Lernraum: V+Ü</a></li>
-          </ul>
-          <h4>Dienstag 10:00</h4>
-        </section>
-        <section class="benotet">
           <h3>Datenbanken und Modellierung</h3>
           <ul>
             <li><a href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=777">Lernraum: V+Ü</a></li>
           </ul>
-          <h4>Mittwoch 20:00</h4>
+          <h4>TBD</h4>
         </section>
         <section class="unbenotet">
-          <h3>Grundlagen der Projekt- entwicklung</h3>
+          <h3>TdPE II</h3>
           <ul>
-            <li><a href="https://tdpe.techfak.uni-bielefeld.de/login?back_url=https%3A%2F%2Ftdpe.techfak.uni-bielefeld.de%2Fprojects%2Ftdpe-ws-2016">Redmine</a></li>
+            <li><a href="https://tdpe.techfak.uni-bielefeld.de/projects/tdpe-ss-2017">Redmine</a></li>
             <li><a href="https://citdpe.techfak.uni-bielefeld.de/">Jenkins</a></li>
-            <li><a href="https://bis.uni-bielefeld.de/sites/4295/Start.aspx">Lernraum: V</a></li>
-            <li><a href="https://bis.uni-bielefeld.de/sites/3071/Start.aspx">Lernraum: S+Ü</a></li>
           </ul>
-          <h4>Mittwoch 10:00</h4>
+          <h4>TBD</h4>
         </section>
         <section class="teilnoten">
-          <h3>Mathe</h3>
+          <h3>Stochastik</h3>
           <ul>
-            <li><a href="https://www.math.uni-bielefeld.de/~dotten/NWI_GDGL1617.shtml">Website S+Ü+V</a></li>
+            <li><a href="#">Website S+Ü+V</a></li>
           </ul>
-          <h4>Mittwoch 14:00</h4>
+          <h4>TBD</h4>
         </section>
         <section class="unbenotet">
-          <h3>GKK I</h3>
+          <h3>GKK II</h3>
           <ul>
-            <li><a href="https://bis.uni-bielefeld.de/sites/3806/Start.aspx">Lernraum: V+Ü</a></li>
+            <li><a href="#">Lernraum: V+Ü</a></li>
           </ul>
-          <h4>Donnerstag 10:00</h4>
+          <h4>TBD</h4>
         </section>
         <section class="email">
           <h3>Email-Accounts</h3>
@@ -69,36 +53,6 @@
           </ul>
         </section>
       </section>
-      <!--section class="info">
-        <!-- <section class="table">
-          <table>
-            <tr>
-              <th>Deadline</th>
-              <th>Dienstag</th>
-              <th>Mittwoch</th>
-              <th>Donnerstag</th>
-            </tr>
-            <tr>
-              <td>10:00 Uhr</td>
-              <td>TheoInf (uKW) <br> CMD4, PFtd 248 <br> TC+JP+JG | JS+* <br> <br> TdPE Redmine <br> Einzelabgabe</td>
-              <td> </td>
-              <td>GKK (uKW) <br> Lernraum /VL <br> TC+JS | JG + JP + D </td>
-            </tr>
-            <tr>
-              <td>14:00 Uhr</td>
-              <td> </td>
-              <td>Mathe/NWI <br> V3-128, PF 187 <br> TC+JP+JS | JG+D+D</td>
-              <td> </td>
-            </tr>
-            <tr>
-              <td>20:00 Uhr</td>
-              <td> </td>
-              <td>Datenbanken <br> LernraumPlus <br> Einzelabgabe</td>
-              <td> </td>
-            </tr>
-          </table>
-        </section> >
-      </section-->
     </div>
   </body>
 </html>
