Add stuff for current Semester

--- a/index.html
+++ b/index.html
@@ -24,6 +24,30 @@
           </ul>
           <h4>TBD</h4>
         </section>
+        <section class="unbenotet">
+          <h3>Betriebssysteme</h3>
+          <ul>
+            <li><a href="http://ti.uni-bielefeld.de/html/teaching/SS17/techinf2/index.html">TI-Website</a></li>
+          </ul>
+          <h4>
+            C: 06.06.-09.06.2017<br>
+            BS: 17.07.-21.07.2017
+          </h4>
+        </section>
+        <section class="benotet">
+          <h3>Algorithmen der Informatik</h3>
+          <ul>
+            <li><a href="#">TBD</a></li>
+          </ul>
+          <h4>N/A</h4>
+        </section>
+        <section class="unbenotet">
+          <h3>SIMD HPC</h3>
+          <ul>
+            <li><a href="http://ti.uni-bielefeld.de/html/teaching/SS17/simd/index.html">SIMD Website</a></li>
+          </ul>
+          <h4>N/A</h4>
+        </section>
         <section class="teilnoten">
           <h3>Stochastik</h3>
           <ul>
@@ -35,6 +59,15 @@
           <h3>GKK II</h3>
           <ul>
             <li><a href="#">Lernraum: V+Ü</a></li>
+          </ul>
+          <h4>TBD</h4>
+        </section>
+        <section class="unbenotet">
+          <h3>Digitalelektronik</h3>
+          <ul>
+            <li><a href="https://bis.uni-bielefeld.de/sites/5259/Lists/Announcements/DispForm.aspx?ID=1&Source=https%3A%2F%2Fbis%2Euni-bielefeld%2Ede%2Fsites%2F5259%2FStart%2Easpx">
+              Lernraum Plus
+            </a></li>
           </ul>
           <h4>TBD</h4>
         </section>
