--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section class="benotet">
           <h3>Algorithmen der Informatik</h3>
           <ul>
-            <li><a href="#">TBD</a></li>
+            <li><a href="https://bis.uni-bielefeld.de/sites/6057/Start.aspx">TBD</a></li>
           </ul>
           <h4>N/A</h4>
         </section>
@@ -51,14 +51,14 @@
         <section class="teilnoten">
           <h3>Stochastik</h3>
           <ul>
-            <li><a href="#">Website S+Ü+V</a></li>
+            <li><a href="https://www.math.uni-bielefeld.de/~daltemeier/NWI2017.html">Website S+Ü+V</a></li>
           </ul>
           <h4>TBD</h4>
         </section>
         <section class="unbenotet">
           <h3>GKK II</h3>
           <ul>
-            <li><a href="#">Lernraum: V+Ü</a></li>
+            <li><a href="https://bis.uni-bielefeld.de/sites/6055/Start.aspx">Lernraum: V+Ü</a></li>
           </ul>
           <h4>TBD</h4>
         </section>
