--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             <li><a href="https://tdpe.techfak.uni-bielefeld.de/projects/tdpe-ss-2017">Redmine</a></li>
             <li><a href="https://citdpe.techfak.uni-bielefeld.de/">Jenkins</a></li>
           </ul>
-          <h4>TBD</h4>
+          <h4>-</h4>
         </section>
         <section class="unbenotet">
           <h3>Betriebssysteme</h3>
           <ul>
-            <li><a href="http://ti.uni-bielefeld.de/html/teaching/SS17/techinf2/index.html">TI-Website</a></li>
+            <li><a href="http://ti.uni-bielefeld.de/html/teaching/SS17/techinf2/index.html">TI-Website: V+Ü</a></li>
           </ul>
           <h4>
             C: 06.06.-09.06.2017<br>
@@ -37,7 +37,7 @@
         <section class="benotet">
           <h3>Algorithmen der Informatik</h3>
           <ul>
-            <li><a href="https://bis.uni-bielefeld.de/sites/6057/Start.aspx">TBD</a></li>
+            <li><a href="https://bis.uni-bielefeld.de/sites/6057/Start.aspx">Lernraum V+Ü</a></li>
           </ul>
           <h4>N/A</h4>
         </section>
