Change URL for DEP

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <section class="unbenotet">
           <h3>Digitalelektronik</h3>
           <ul>
-            <li><a href="https://bis.uni-bielefeld.de/sites/5259/Lists/Announcements/DispForm.aspx?ID=1&Source=https%3A%2F%2Fbis%2Euni-bielefeld%2Ede%2Fsites%2F5259%2FStart%2Easpx">
+            <li><a href="https://bis.uni-bielefeld.de/sites/5259/_layouts/15/UniBi.Learning/OpenMoodleCourse.ashx?SiteId=5259&MoodleCourseId=921">
               Lernraum Plus
             </a></li>
           </ul>
