Change entries to new semester
Times still missing

--- a/index.html
+++ b/index.html
@@ -14,63 +14,59 @@
     <header>
       <h1>Wichtige Uni-Websites</h1>
     </header>
-    <div class="wrapper">
+    <div>
       <section class="main">
-        <section class="unbenotet">
-          <h3>TdPE II</h3>
-          <ul>
-            <li><a href="https://tdpe.techfak.uni-bielefeld.de/projects/tdpe-ss-2017">Redmine</a></li>
-            <li><a href="https://citdpe.techfak.uni-bielefeld.de/">Jenkins</a></li>
-          </ul>
-          <h4>-</h4>
-        </section>
-        <section class="unbenotet">
-          <h3>Betriebssysteme</h3>
-          <ul>
-            <li><a href="http://ti.uni-bielefeld.de/html/teaching/SS17/techinf2/index.html">TI-Website: V+Ü</a></li>
-          </ul>
-          <h4>
-            C: 06.06.-09.06.2017<br>
-            BS: 17.07.-21.07.2017
-          </h4>
-        </section>
-        <section class="benotet">
-          <h3>Algorithmen der Informatik</h3>
-          <ul>
-            <li><a href="https://bis.uni-bielefeld.de/sites/6057/Start.aspx">Lernraum V+Ü</a></li>
-          </ul>
+		<section class="unbenotet">
+			<h3>Digitale Kommunikation und Internetdienste</h3>
+			<ul>
+				<li><a href="https://bis.uni-bielefeld.de/sites/7714/Start.aspx">Lernraum 1</a></li>
+				<li><a href="https://bis.uni-bielefeld.de/sites/7715/Start.aspx">Lernraum 2</a></li>
+			</ul>
           <h4>N/A</h4>
-        </section>
-        <section class="unbenotet">
-          <h3>SIMD HPC</h3>
-          <ul>
-            <li><a href="http://ti.uni-bielefeld.de/html/teaching/SS17/simd/index.html">SIMD Website</a></li>
-          </ul>
+		</section>
+	    <section class="unbenotet">
+	    	<h3>Einführung in die Computergrafik</h3>
+	    	<ul>
+	    		<li><a href="https://bis.uni-bielefeld.de/sites/8654/Start.aspx">Lernraum</a></li>
+	    		<li><a href="http://graphics.uni-bielefeld.de/teaching/ws17/cg/">Website</a></li>
+	    	</ul>
           <h4>N/A</h4>
-        </section>
-        <section class="teilnoten">
-          <h3>Stochastik</h3>
-          <ul>
-            <li><a href="https://www.math.uni-bielefeld.de/~daltemeier/NWI2017.html">Website S+Ü+V</a></li>
-          </ul>
-          <h4>TBD</h4>
-        </section>
-        <section class="unbenotet">
-          <h3>GKK II</h3>
-          <ul>
-            <li><a href="https://bis.uni-bielefeld.de/sites/6055/Start.aspx">Lernraum: V+Ü</a></li>
-          </ul>
-          <h4>TBD</h4>
-        </section>
-        <section class="unbenotet">
-          <h3>Digitalelektronik</h3>
-          <ul>
-            <li><a href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=1252">
-              Lernraum Plus
-            </a></li>
-          </ul>
-          <h4>TBD</h4>
-        </section>
+	    </section>
+	    <section class="teilnoten">
+	    	<h3>Vertiefung NWI: Gewöhnliche Differentialgleichungen</h3>
+	    	<ul>
+	    		<li><a href="https://bis.uni-bielefeld.de/sites/9044/Start.aspx">Lernraum</a></li>
+	    	</ul>
+          <h4>N/A</h4>
+	    </section>
+		<section class="unbenotet">
+			<h3>Brain Machine Interfaces</h3>
+			<ul>
+				<li><a href="https://bis.uni-bielefeld.de/sites/8961/Start.aspx">Lernraum</a></li>
+			</ul>
+          <h4>N/A</h4>
+		</section>
+	    <section class="unbenotet">
+	    	<h3>Grundlagen Künstlicher Kognition I</h3>
+	    	<ul>
+	    		<li><a href="https://bis.uni-bielefeld.de/sites/8957/Start.aspx">Lernraum</a></li>
+	    	</ul>
+          <h4>N/A</h4>
+	    </section>
+		<section class="unbenotet">
+			<h3>Introduction to Machine Learning</h3>
+			<ul>
+				<li><a href="https://bis.uni-bielefeld.de/sites/8997/Start.aspx">Lernraum</a></li>
+			</ul>
+          <h4>N/A</h4>
+		</section>	
+		<section class="unbenotet">
+			<h3>Mobile Roboter</h3>
+			<ul>
+				<li><a href="https://www.ti.uni-bielefeld.de/html/teaching/WS1718/mobrob/index.html">Website</a></li>
+			</ul>
+          <h4>N/A</h4>
+		</section>
         <section class="email">
           <h3>Email-Accounts</h3>
           <ul>
@@ -78,7 +74,6 @@
             <li><a href="https://webmail.techfak.de/">Techfak</a></li>
           </ul>
         </section>
-      </section>
     </div>
   </body>
 </html>
