Fix alignment for smaller desktop screens
By moving from floats to flexboxes

--- a/index.html
+++ b/index.html
@@ -1,86 +1,118 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Uni-Websites</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/stylesheet.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
-    <link rel="icon" href="css/icon64.ico" type="image/vnd.microsoft.icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <body>
-    <header>
-      <h1>Wichtige Uni-Websites</h1>
-    </header>
-    <div>
-      <section class="main">
-		<section class="unbenotet">
-			<h3>Digitale Kommunikation und Internetdienste</h3>
-			<ul>
-				<li><a href="https://bis.uni-bielefeld.de/sites/7714/Start.aspx">Lernraum 1</a></li>
-				<li><a href="https://bis.uni-bielefeld.de/sites/7715/Start.aspx">Lernraum 2</a></li>
-			</ul>
-          <h4>N/A</h4>
-		</section>
-	    <section class="unbenotet">
-	    	<h3>Einführung in die Computergrafik</h3>
-	    	<ul>
-	    		<li><a href="https://bis.uni-bielefeld.de/sites/8654/Start.aspx">Lernraum</a></li>
-	    		<li><a href="http://graphics.uni-bielefeld.de/teaching/ws17/cg/">Website</a></li>
-	    	</ul>
-          <h4>N/A</h4>
-	    </section>
-	    <section class="teilnoten">
-	    	<h3>Vertiefung NWI: Gewöhnliche Differentialgleichungen</h3>
-	    	<ul>
-	    		<li><a href="https://bis.uni-bielefeld.de/sites/9044/Start.aspx">Lernraum</a></li>
-	    	</ul>
-          <h4>N/A</h4>
-	    </section>
-		<section class="unbenotet">
-			<h3>Brain Machine Interfaces</h3>
-			<ul>
-				<li><a href="https://bis.uni-bielefeld.de/sites/8961/Start.aspx">Lernraum</a></li>
-			</ul>
-          <h4>N/A</h4>
-		</section>
-	    <section class="unbenotet">
-	    	<h3>Grundlagen Künstlicher Kognition I</h3>
-	    	<ul>
-	    		<li><a href="https://bis.uni-bielefeld.de/sites/8957/Start.aspx">Lernraum</a></li>
-	    	</ul>
-          <h4>N/A</h4>
-	    </section>
-		<section class="unbenotet">
-			<h3>Introduction to Machine Learning</h3>
-			<ul>
-				<li><a href="https://bis.uni-bielefeld.de/sites/8997/Start.aspx">Lernraum</a></li>
-			</ul>
-          <h4>N/A</h4>
-		</section>	
-		<section class="unbenotet">
-			<h3>Mobile Roboter</h3>
-			<ul>
-				<li><a href="https://www.ti.uni-bielefeld.de/html/teaching/WS1718/mobrob/index.html">Website</a></li>
-			</ul>
-          <h4>N/A</h4>
-		</section>
-	<section class="unbenotet">
-		<h3>Neuromorphic Engineering<h3>
-		<ul>
-			<li><a href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=1808">Lernraum Plus</a></li>
-		</ul>
-		<h4>N/A</h4>
-	</section>
-        <section class="email">
-          <h3>Email-Accounts</h3>
-          <ul>
-            <li><a href="https://webmail.uni-bielefeld.de/">HRZ</a></li>
-            <li><a href="https://webmail.techfak.de/">Techfak</a></li>
-          </ul>
-        </section>
-    </div>
-  </body>
+
+<head>
+	<title>Uni-Websites</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/stylesheet.css">
+	<link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
+	<link rel="icon" href="css/icon64.ico" type="image/vnd.microsoft.icon">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+	<header>
+		<h1>Wichtige Uni-Websites</h1>
+	</header>
+	<div>
+		<div class="container-1">
+			<div class="unbenotet">
+				<h3>Digitale Kommunikation und Internetdienste</h3>
+				<ul>
+					<li>
+						<a href="https://bis.uni-bielefeld.de/sites/7714/Start.aspx">Lernraum 1</a>
+					</li>
+					<li>
+						<a href="https://bis.uni-bielefeld.de/sites/7715/Start.aspx">Lernraum 2</a>
+					</li>
+				</ul>
+				<h4>N/A</h4>
+			</div>
+			<div class="unbenotet">
+				<h3>Einführung in die Computergrafik</h3>
+				<ul>
+					<li>
+						<a href="https://bis.uni-bielefeld.de/sites/8654/Start.aspx">Lernraum</a>
+					</li>
+					<li>
+						<a href="http://graphics.uni-bielefeld.de/teaching/ws17/cg/">Website</a>
+					</li>
+				</ul>
+				<h4>N/A</h4>
+			</div>
+			<div class="teilnoten">
+				<h3>Vertiefung NWI: Gewöhnliche Differentialgleichungen</h3>
+				<ul>
+					<li>
+						<a href="https://bis.uni-bielefeld.de/sites/9044/Start.aspx">Lernraum</a>
+					</li>
+				</ul>
+				<h4>N/A</h4>
+			</div>
+		</div>
+		<div class="container-2">
+			<div class="unbenotet">
+				<h3>Brain Machine Interfaces</h3>
+				<ul>
+					<li>
+						<a href="https://bis.uni-bielefeld.de/sites/8961/Start.aspx">Lernraum</a>
+					</li>
+				</ul>
+				<h4>N/A</h4>
+			</div>
+			<div class="unbenotet">
+				<h3>Grundlagen Künstlicher Kognition I</h3>
+				<ul>
+					<li>
+						<a href="https://bis.uni-bielefeld.de/sites/8957/Start.aspx">Lernraum</a>
+					</li>
+				</ul>
+				<h4>N/A</h4>
+			</div>
+			<div class="unbenotet">
+				<h3>Introduction to Machine Learning</h3>
+				<ul>
+					<li>
+						<a href="https://bis.uni-bielefeld.de/sites/8997/Start.aspx">Lernraum</a>
+					</li>
+				</ul>
+				<h4>N/A</h4>
+			</div>
+		</div>
+		<div class="container-3">
+			<div class="unbenotet">
+				<h3>Mobile Roboter</h3>
+				<ul>
+					<li>
+						<a href="https://www.ti.uni-bielefeld.de/html/teaching/WS1718/mobrob/index.html">Website</a>
+					</li>
+				</ul>
+				<h4>N/A</h4>
+			</div>
+			<div class="unbenotet">
+				<h3>Neuromorphic Engineering
+					<h3>
+						<ul>
+							<li>
+								<a href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=1808">Lernraum Plus</a>
+							</li>
+						</ul>
+						<h4>N/A</h4>
+			</div>
+			<div class="email">
+				<h3>Email-Accounts</h3>
+				<ul>
+					<li>
+						<a href="https://webmail.uni-bielefeld.de/">HRZ</a>
+					</li>
+					<li>
+						<a href="https://webmail.techfak.de/">Techfak</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</body>
+
 </html>
