--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<h1>Wichtige Uni-Websites</h1>
 	</header>
 	<div>
-		<div class="container-1">
+		<div class="triplet">
 			<div class="unbenotet">
 				<h3>Digitale Kommunikation und Internetdienste</h3>
 				<ul>
@@ -51,7 +51,7 @@
 				<h4>N/A</h4>
 			</div>
 		</div>
-		<div class="container-2">
+		<div class="triplet">
 			<div class="unbenotet">
 				<h3>Brain Machine Interfaces</h3>
 				<ul>
@@ -80,7 +80,7 @@
 				<h4>N/A</h4>
 			</div>
 		</div>
-		<div class="container-3">
+		<div class="triplet">
 			<div class="unbenotet">
 				<h3>Mobile Roboter</h3>
 				<ul>
