Change Websites for current Semester

--- a/index.html
+++ b/index.html
@@ -16,86 +16,42 @@
 		<h1>Wichtige Uni-Websites</h1>
 	</header>
 	<div>
-		<div class="triplet">
+      <div class="triplet">
+          <div class="unbenotet" >
+              <h3>Scientific Computing</h3>
+              <ul>
+                  <li>
+                      <a href="http://graphics.uni-bielefeld.de/teaching/computing/">Website</a>
+                  </li>
+              </ul>
+              <h4>N/A</h4>
+          </div>
+          <div class="unbenotet">
+              <h3>Computer Animation</h3>
+              <ul>
+                  <li>
+                      <a href="http://graphics.uni-bielefeld.de/teaching/animation/">Website</a>
+                  </li>
+              </ul>
+              <h4>N/A</h4>
+          </div>
+          <div class="unbenotet">
+              <h3>SPSS</h3>
+              <ul>
+                  <li>
+                      <a href="https://bis.uni-bielefeld.de/sites/10173/Start.aspx">Lernraum</a>
+                      <a href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=2175">Lernraum Plus</a>
+                  </li>
+              </ul>
+              <h4>N/A</h4>
+          </div>
+      </div>
+		  <div class="triplet">
 			<div class="unbenotet">
-				<h3>Digitale Kommunikation und Internetdienste</h3>
-				<ul>
-					<li>
-						<a href="https://bis.uni-bielefeld.de/sites/7714/Start.aspx">Lernraum 1</a>
-					</li>
-					<li>
-						<a href="https://bis.uni-bielefeld.de/sites/7715/Start.aspx">Lernraum 2</a>
-					</li>
-				</ul>
-				<h4>N/A</h4>
-			</div>
-			<div class="unbenotet">
-				<h3>Einführung in die Computergrafik</h3>
-				<ul>
-					<li>
-						<a href="https://bis.uni-bielefeld.de/sites/8654/Start.aspx">Lernraum</a>
-					</li>
-					<li>
-						<a href="http://graphics.uni-bielefeld.de/teaching/ws17/cg/">Website</a>
-					</li>
-				</ul>
-				<h4>N/A</h4>
-			</div>
-			<div class="teilnoten">
-				<h3>Vertiefung NWI: Gewöhnliche Differentialgleichungen</h3>
-				<ul>
-					<li>
-						<a href="https://bis.uni-bielefeld.de/sites/9044/Start.aspx">Lernraum</a>
-					</li>
-				</ul>
-				<h4>N/A</h4>
-			</div>
-		</div>
-		<div class="triplet">
-			<div class="unbenotet">
-				<h3>Brain Machine Interfaces</h3>
-				<ul>
-					<li>
-						<a href="https://bis.uni-bielefeld.de/sites/8961/Start.aspx">Lernraum</a>
-					</li>
-				</ul>
-				<h4>N/A</h4>
-			</div>
-			<div class="unbenotet">
-				<h3>Grundlagen Künstlicher Kognition I</h3>
-				<ul>
-					<li>
-						<a href="https://bis.uni-bielefeld.de/sites/8957/Start.aspx">Lernraum</a>
-					</li>
-				</ul>
-				<h4>N/A</h4>
-			</div>
-			<div class="unbenotet">
-				<h3>Introduction to Machine Learning</h3>
-				<ul>
-					<li>
-						<a href="https://bis.uni-bielefeld.de/sites/8997/Start.aspx">Lernraum</a>
-					</li>
-				</ul>
-				<h4>N/A</h4>
-			</div>
-		</div>
-		<div class="triplet">
-			<div class="unbenotet">
-				<h3>Mobile Roboter</h3>
-				<ul>
-					<li>
-						<a href="https://www.ti.uni-bielefeld.de/html/teaching/WS1718/mobrob/index.html">Website</a>
-					</li>
-				</ul>
-				<h4>N/A</h4>
-			</div>
-			<div class="unbenotet">
-				<h3>Neuromorphic Engineering
-					<h3>
+				<h3>Cryptografie<h3>
 						<ul>
 							<li>
-								<a href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=1808">Lernraum Plus</a>
+								  <a href="https://www.math.uni-bielefeld.de/~frettloe/teach/krypto18.html">Website</a>
 							</li>
 						</ul>
 						<h4>N/A</h4>
@@ -114,5 +70,4 @@
 		</div>
 	</div>
 </body>
-
 </html>
